--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,5 +38,6 @@
                     android:scheme="githubapp" />
             </intent-filter>
         </activity>
+        <activity android:name="com.mcdull.githubapp.ui.detail.RepoDetailActivity" />
     </application>
 </manifest>
