issue,接口没调通

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,5 +39,6 @@
             </intent-filter>
         </activity>
         <activity android:name="com.mcdull.githubapp.ui.detail.RepoDetailActivity" />
+        <activity android:name="com.mcdull.githubapp.ui.issue.CreateIssueActivity" />
     </application>
 </manifest>
